@@ -40,7 +40,7 @@ refmpf_add (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   if (SIZ (u) == 0)
     {
       size = ABSIZ (v);
-      wt = (mp_ptr) TMP_ALLOC ((size+1) * BYTES_PER_MP_LIMB);
+      wt = TMP_ALLOC_LIMBS (size + 1);
       MPN_COPY (wt, PTR (v), size);
       exp = EXP (v);
       neg = SIZ (v) < 0;
@@ -49,7 +49,7 @@ refmpf_add (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   if (SIZ (v) == 0)
     {
       size = ABSIZ (u);
-      wt = (mp_ptr) TMP_ALLOC ((size+1) * BYTES_PER_MP_LIMB);
+      wt = TMP_ALLOC_LIMBS (size + 1);
       MPN_COPY (wt, PTR (u), size);
       exp = EXP (u);
       neg = SIZ (u) < 0;
@@ -70,9 +70,9 @@ refmpf_add (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   hi = MAX (EXP (u), EXP (v));
   lo = MIN (EXP (u) - ABSIZ (u), EXP (v) - ABSIZ (v));
   size = hi - lo;
-  ut = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
-  vt = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
-  wt = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
+  ut = TMP_ALLOC_LIMBS (size + 1);
+  vt = TMP_ALLOC_LIMBS (size + 1);
+  wt = TMP_ALLOC_LIMBS (size + 1);
   MPN_ZERO (ut, size);
   MPN_ZERO (vt, size);
   {int off;
@@ -211,7 +211,7 @@ refmpf_sub (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   if (SIZ (u) == 0)
     {
       size = ABSIZ (v);
-      wt = (mp_ptr) TMP_ALLOC ((size+1) * BYTES_PER_MP_LIMB);
+      wt = TMP_ALLOC_LIMBS (size + 1);
       MPN_COPY (wt, PTR (v), size);
       exp = EXP (v);
       neg = SIZ (v) > 0;
@@ -220,7 +220,7 @@ refmpf_sub (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   if (SIZ (v) == 0)
     {
       size = ABSIZ (u);
-      wt = (mp_ptr) TMP_ALLOC ((size+1) * BYTES_PER_MP_LIMB);
+      wt = TMP_ALLOC_LIMBS (size + 1);
       MPN_COPY (wt, PTR (u), size);
       exp = EXP (u);
       neg = SIZ (u) < 0;
@@ -243,9 +243,9 @@ refmpf_sub (mpf_ptr w, mpf_srcptr u, mpf_srcptr v)
   hi = MAX (EXP (u), EXP (v));
   lo = MIN (EXP (u) - ABSIZ (u), EXP (v) - ABSIZ (v));
   size = hi - lo;
-  ut = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
-  vt = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
-  wt = (mp_ptr) TMP_ALLOC ((size + 1) * BYTES_PER_MP_LIMB);
+  ut = TMP_ALLOC_LIMBS (size + 1);
+  vt = TMP_ALLOC_LIMBS (size + 1);
+  wt = TMP_ALLOC_LIMBS (size + 1);
   MPN_ZERO (ut, size);
   MPN_ZERO (vt, size);
   {int off;
